# MCCource

./: Программа.md
Arduino/: CMakeLists.txt  main.cpp
Arduino/Client/: Client.ino
Arduino/JoystickPS2/: JoystickPS2.ino  machine.h
Arduino/MCCourse/: MCCourse.ino
Arduino/WifiControl/: Client.h  Server.h  WifiControl.ino  machine.h
Arduino/courseAugust/: courseAugust.ino
Arduino/lib/: Arduino.h
PC/: app.py  controller.py  main.html  requirements.txt  script.js  test.py  Функционал.md
PC/src/: Controller.js  UDPServer.py  controller.py  server.py  singleton.py
Result/: JSON.h  Result.ino  machine.h  utils.h
courseAugust/: machine.h
Программа/: helloWorld.c  Программа.md
Программа/files/1/: calculator.cpp  for_iter.cpp  for_range.cpp  func_def.cpp  math.cpp  while.cpp
Программа/files/2/: blink.ino
Программа/files/2/blink/: blink.ino
Программа/files/2/helloWorld/: helloWorld.ino
Программа/files/2/ledWithBtn/: ledWithBtn.ino
Программа/files/2/leds/: leds.ino
Программа/files/5/: PWM_LED.ino  PWM_LED_BUILTIN.ino
Программа/files/6/: Arduino_code.ino  ESP32_code.ino
